files/.nodeshift/files-tp.dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    telepresence: 7b0349d5-5b21-4f67-8360-80afc6853ec8
  name: files-tp
spec:
  replicas: 1
  selector:
    telepresence: 7b0349d5-5b21-4f67-8360-80afc6853ec8
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        telepresence: 7b0349d5-5b21-4f67-8360-80afc6853ec8
    spec:
      containers:
        - env:
            - name: UPLOAD_DIR
              valueFrom:
                configMapKeyRef:
                  name: files-configmap
                  key: upload_dir
          image: 'datawire/telepresence-k8s:0.90'
          imagePullPolicy: IfNotPresent
          name: files-tp
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
