files/.nodeshift/route.yml
apiVersion: v1
kind: Route
metadata:
  name: files
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: files
